Made production db

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,12 +10,6 @@ development:
   <<: *common
   database: vmMobile
 
-#development:
-#  adapter: sqlite3
-#  database: db/development.sqlite3
-#  pool: 5
-#  timeout: 5000
-
 test:
   adapter: mysql2
   encoding: utf8
@@ -26,8 +20,12 @@ test:
   database: vmMobile_test
   timeout: 5000
 
-#production:
-#  adapter: sqlite3
-#  database: db/production.sqlite3
-#  pool: 5
-#  timeout: 5000
+production:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  pool: 5
+  username: root
+  password: im1coolguy
+  database: vmServer_production
+  timeout: 5000
